--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +91 9520637054</p>
+<p>Tel: +91 xxxxxxxxxx</p>
 <p>Email: sharmanishtha1990@gmail.com</p>
 <p>Address:</p>
 <p>
-  93/1, Shastri Nagar<br />
+  Shastri Nagar<br />
   Meerut, Uttar Pradesh<br />
   India <br />
 </p>
